major push, fixing header alignment and style

--- a/css/bm-layout.css
+++ b/css/bm-layout.css
@@ -1,16 +1,15 @@
 @charset "utf-8";
 /****************************************************
-  Baker Mackenzie
+  Baker & McKenzie
 
-0. Design Notes
-1. HTML elements
-2. Foundation Overrides
-3. Structure
-4. Navigation
-5. Modular / Icons
-6. General
-7. Queries
-8. Yo Fonts Mama
+  0. Design Notes
+  1. HTML elements
+  3. Structure
+  4. Navigation
+  5. Modular / Icons
+  6. General
+  7. Queries
+  8. Yo Fonts Mama
 
 ****************************************************/
 
@@ -18,28 +17,34 @@
   0. Design Notes
 ****************************************************/
 
+/* non-responsive, OOTB SP2013 build, supplemented
+  with a few stylistic/custom features */
+
 
 /****************************************************
   1. HTML Elements
 ****************************************************/
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 header {
-  height: 3.5em;
+  max-height: 3.5em;
+  position: relative;
 }
 
 nav {
-  display: inline-block;
+  position: absolute;
+  /* margin-left: 1em; */
+  /* margin-top: 1em; */
+  left: 2em;
+  bottom: 0em;
 }
   nav img {
     display: inline-block;
   }
-
-
-/****************************************************
-  2. Foundation Overrides
-****************************************************/
-
-
 
 
 /****************************************************
@@ -53,13 +58,93 @@ nav {
 
 
 /****************************************************
+  4. Navigation
+****************************************************/
+
+/* blankity blank blank */
+
+
+/****************************************************
   5. Modular
 ****************************************************/
 
-.txt-bm-red { color: rgb(99,0,0); }
-.txt-bm-grey { color: rgb(153, 153, 153); }
+.bg-bm-red      { background: #A71A30; background: rgba(167, 26, 48, 1); }
 
+.bg-teal        { background: #31C7D8; background: rgba(49, 199, 216, 1); }
+.bg-sunflower   { background: #FFC34C; background: rgba(255, 195, 76, 1); }
+.bg-blue-dark   { background: #145E80; background: rgba(20, 94, 128, 1); }
+.bg-white       { background: #FFFFFF; background: rgba(255, 255, 255, 1); }
+.bg-grey        { background: #CCCCCC; background: rgba(204, 204, 204, 1); }
+.bg-eggshell    { background: #F1F1F1; background: rgba(241, 241, 241, 1); }
+.bg-black       { background: #000000; background: rgba(0, 0, 0, 1); }
+.bg-spruce      { background: #20674e; background: rgba(32, 103, 78, 1); }
+.bg-eggplant    { background: #652965; background: rgba(101, 41, 101, 1); }
 
+.txt-bm-red     { color: #A71A30; color: rgba(167, 26, 48, 1); }
+.txt-black      { color: #000000; color: rgba(0, 0, 0, 1); }
+.txt-blue-light { color: #34C3FF; color: rgba(52, 195, 255, 1); }
+.txt-blue-dark  { color: #145E80; color: rgba(20, 94, 128, 1); }
+.txt-grey       { color: #CCCCCC; color: rgba(153, 153, 153, 1); }
+.txt-grey-dark  { color: #999999; color: rgba(153, 153, 153, 1); }
+.txt-sunflower  { color: #FFC34C; color: rgba(255, 195, 76, 1); }
+.txt-teal       { color: #31C7D8; color: rgba(49, 199, 216, 1); }
+.txt-white      { color: #FFFFFF; color: rgba(255, 255, 255, 1); }
+
+.no-decor {
+  text-decoration: none;
+}
+
+  .no-decor:hover {
+    text-decoration: underline;
+  }
+
+.icon-facebook:before           { content: '\e600'; }
+.icon-link:before               { content: '\e601'; }
+.icon-weather:before            { content: '\e602'; }
+.icon-menu2:before              { content: '\e603'; }
+.icon-tools:before              { content: '\e604'; }
+.icon-person:before             { content: '\e605'; }
+.icon-project:before            { content: '\e606'; }
+.icon-home:before               { content: '\e607'; }
+.icon-close:before              { content: '\e608'; }
+.icon-arrowdown:before          { content: '\e609'; }
+.icon-search:before             { content: '\e610'; }
+.icon-hamburger:before          { content: '\e611'; }
+.icon-view:before               { content: '\e612'; }
+.icon-pinterest:before          { content: '\e613'; }
+.icon-gplus:before              { content: '\e614'; }
+.icon-twitter:before            { content: '\e615'; }
+.icon-arrowrightfill:before     { content: '\e616'; }
+.icon-arrowrightflat:before     { content: '\e617'; }
+.icon-survey:before             { content: '\e618'; }
+.icon-emailreport:before        { content: '\e619'; }
+.icon-calendar:before           { content: '\e620'; }
+.icon-notes:before              { content: '\e621'; }
+.icon-gallery:before            { content: '\e622'; }
+.icon-arrowleftflat:before      { content: '\e623'; }
+.icon-phone:before              { content: '\e624'; }
+.icon-sites:before              { content: '\e625'; }
+.icon-question:before           { content: '\e626'; }
+.icon-company:before            { content: '\e627'; }
+.icon-clock:before              { content: '\e628'; }
+.icon-searchperson:before       { content: '\e629'; }
+.icon-payroll:before            { content: '\e630'; }
+.icon-travel:before             { content: '\e631'; }
+.icon-arrowrightslider:before   { content: '\e632'; }
+.icon-arrowleftslider:before    { content: '\e633'; }
+.icon-arrowleftpointed:before   { content: '\e634'; }
+.icon-arrowrightpointed:before  { content: '\e635'; }
+.icon-teamsite:before           { content: '\e636'; }
+.icon-projectsite:before        { content: '\e637'; }
+
+.clearfix:before, .clearfix:after {
+  content: " ";
+  display: table;
+}
+
+  .clearfix:after {
+    clear: both;
+  }
 
 /****************************************************
   6. General
@@ -70,25 +155,26 @@ nav {
   margin-right: 3em;
   margin-top: 1em;
   padding-right: 2em;
-  border-right: 1px solid #AAA;
 }
 
 .header-nav-home {
-display: inline-block;
-margin-right: 2em;
-margin-top: 1em;
+  display: inline-block;
 }
 
 .header-nav-categories {
-display: inline-block;
+  display: inline-block;
 }
 
   .header-nav-categories a {
     text-decoration: none;
     display: block;
-    margin: 0 2em;
+    margin: 0 0 0 4em;
     float: left;
   }
+
+    .header-nav-categories a span {
+      margin-left: 0.5em;
+    }
 
 .header-nav-sp {
   float: right;
@@ -105,8 +191,37 @@ display: inline-block;
 }
 
 .subheader-title {
-font-size: 1.5em;
-line-height: 2em;
-margin-left: 0.5em;
+  font-size: 1.5em;
+  line-height: 2em;
+  margin-left: 0.5em;
+}
+
+
+
+
+/****************************************************
+  8. Yo Fonts Mama
+****************************************************/
+
+@font-face {
+    font-family: "tpglyph";
+    src:url("../fonts/tpglyph.eot");
+    src:url("../fonts/tpglyph.eot?#iefix") format("embedded-opentype"),
+      url("../fonts/tpglyph.ttf") format("truetype"),
+      url("../fonts/tpglyph.woff") format("woff"),
+      url("../fonts/tpglyph.svg#tpglyph") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+[class*="icon-"]{
+  font-family: "tpglyph";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
